наполнение сайта контентом

--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -9,7 +9,7 @@
                     <div class="site-heading">
                         <h1 style="font-family: 'Lora', 'Times New Roman', serif">О нас</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Вот так и живем</span>
+                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Лена, да придумай уже что-то в эту строку</span>
                     </div>
                 </div>
             </div>
@@ -18,13 +18,13 @@
 {% endblock %}
 
 {% block content %}
-        <!-- Post Content -->
+        <!-- article Content -->
         <article>
         <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif; font-size: 18px; text-align: justify; text-indent: 1.5em;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>Наш приоритет – индивидуальный подход, который основывается на понимании истинных целей и потребностей каждого клиента и бизнеса. Мы работаем в тесном взаимодействии с клиентами и нацелены на долгосрочное сотрудничество.
-В своей работе мы руководствуемся следующей ценностной формулой: работать максимально результативно для клиента, эффективно для фирмы, ответственно для команды и общественности. Наша компания старается строить стабильные доверительные отношения, внимательно и своевременно реагируя на запросы клиента.</p>
+В своей работе руководствуемся следующей ценностной формулой: работать максимально результативно для клиента, эффективно для фирмы, ответственно для команды и общественности. Наша компания старается строить стабильные доверительные отношения, внимательно и своевременно реагируя на запросы клиента.</p>
                 </div>
             </div>
         </div>
