--- a/templates/app/services.html
+++ b/templates/app/services.html
@@ -19,13 +19,14 @@
 
 {% block content %}
     <!-- Main Content -->
-    <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif;">
-        <div class="row">
+        <div class="container style="font-family : 'Georgia', Times New Roman, Times, serif;">
+          <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Какие-то услуги</p>
+                <div class="post-preview">
+                    <h2 class="post-title" style="font-family : 'Georgia', Times New Roman, Times, serif;"><a href="{% url 'service1' %}">Комплексное юридическое обслуживание</a></h2>
+                    <h2 class="post-title" style="font-family : 'Georgia', Times New Roman, Times, serif;"><a href="{% url 'service2' %}">Представительство в судах | Защита интересов</a></h2>
+                </div>
             </div>
+          </div>
         </div>
-    </div>
-
-    <hr>
 {% endblock %}
