--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
                     <ul class="list-inline text-center">
 
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Елена Мельникова 2014</p>
+                    <p class="copyright text-muted">Копирайт &copy; Елена Мельникова 2014</p>
                 </div>
             </div>
         </div>
