наполнение сайта контентом

--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -20,7 +20,7 @@
 {% block content %}
         <!-- article Content -->
         <article>
-        <div class="container" style="font-family : 'Georgia', Times New Roman, Times, serif; font-size: 18px; text-align: justify; text-indent: 1.5em;">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <p>Наш приоритет – индивидуальный подход, который основывается на понимании истинных целей и потребностей каждого клиента и бизнеса. Мы работаем в тесном взаимодействии с клиентами и нацелены на долгосрочное сотрудничество.
