наполнение сайта контентом

--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -9,7 +9,7 @@
                     <div class="site-heading">
                         <h1 style="font-family: 'Lora', 'Times New Roman', serif">О нас</h1>
                         <hr class="small">
-                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Лена, да придумай уже что-то в эту строку</span>
+                        <span class="subheading" style="font-family: 'Lora', 'Times New Roman', serif">Почему вам выгодно сотрудничать с нами</span>
                     </div>
                 </div>
             </div>
